# 3d-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README-ru.md  README.md
docs/: _camera_8hpp_source.html  _display_8hpp_source.html  _file_loader_8hpp_source.html  _mesh_8hpp_source.html  _path_keeper_8hpp_source.html  _shader_8hpp_source.html  _transform_8hpp_source.html  _vertex_8hpp_source.html  annotated.html  class_camera-members.html  class_camera.html  class_display-members.html  class_display.html  class_file_loader-members.html  class_file_loader.html  class_mesh-members.html  class_mesh.html  class_path_keeper-members.html  class_path_keeper.html  class_shader-members.html  class_shader.html  class_transform-members.html  class_transform.html  class_triangle-members.html  class_triangle.html  class_vertex-members.html  class_vertex.html  class_vertex_1_1_custom_exception-members.html  class_vertex_1_1_custom_exception.html  classes.html  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  hierarchy.html  md__r_e_a_d_m_e-ru.html  md__r_e_a_d_m_e.html  pages.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  pages_0.js  (+1 more)
inc/: CMakeLists.txt  Camera.hpp  Display.hpp  FileLoader.hpp  Mesh.hpp  PathKeeper.hpp  Shader.hpp  Texture.hpp  Transform.hpp  Vertex.hpp
libGlew/: Makefile
samples/: histogram_samples.html
shaders/: basicShader.ft  basicShader.vx
src/: CMakeLists.txt  Display.cpp  FileLoader.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  main.cpp
stls/: RP-technical-task-1.docx
(+1 files in other folders)
